globus-ftp-client (8.31-1+gt6.@distro@) @distro@; urgency=low

  * Makefile fix

 -- Globus Toolkit <support@globus.org>  Thu, 18 Aug 2016 16:09:07 -0400

globus-ftp-client (8.30-1+gt6.@distro@) @distro@; urgency=low

  * Updates for OpenSSL 1.1.0

 -- Globus Toolkit <support@globus.org>  Tue, 16 Aug 2016 15:45:17 -0400

globus-ftp-client (8.29-1+gt6.@distro@) @distro@; urgency=low

  * Don't overwite LDFLAGS

 -- Globus Toolkit <support@globus.org>  Tue, 03 May 2016 16:19:11 -0400

globus-ftp-client (8.28-1+gt6.@distro@) @distro@; urgency=low

  * Use prelinks for tests so that they run on El Capitan

 -- Globus Toolkit <support@globus.org>  Mon, 18 Apr 2016 15:03:33 -0400

globus-ftp-client (8.27-2+gt6.@distro@) @distro@; urgency=low

  * Update XIO Driver package names

 -- Globus Toolkit <support@globus.org>  Tue, 15 Dec 2015 10:40:51 -0500

globus-ftp-client (8.27-1+gt6.@distro@) @distro@; urgency=low

  * prevent endless loop when auto-retrying failed pasv on other server

 -- Globus Toolkit <support@globus.org>  Mon, 23 Nov 2015 15:06:45 -0600

globus-ftp-client (8.26-1+gt6.@distro@) @distro@; urgency=low

  * Disable mandatory IPv6 in tests. Can be enabled via the environment if needed

 -- Globus Toolkit <support@globus.org>  Fri, 20 Nov 2015 09:44:01 -0500

globus-ftp-client (8.25-1+gt6.@distro@) @distro@; urgency=low

  * GT-604: fix ipv6 negotiation when source does not pre-connect

 -- Globus Toolkit <support@globus.org>  Fri, 23 Oct 2015 15:48:42 -0500

globus-ftp-client (8.24-1+gt6.@distro@) @distro@; urgency=low

  * use SIGINT to terminating test server for gcov

 -- Globus Toolkit <support@globus.org>  Tue, 28 Jul 2015 12:17:01 -0400

globus-ftp-client (8.23-1+gt6.@distro@) @distro@; urgency=low

  * Fix crash in error handling

 -- Globus Toolkit <support@globus.org>  Wed, 15 Jul 2015 12:26:16 -0400

globus-ftp-client (8.22-1+gt6.@distro@) @distro@; urgency=low

  * Fix tests on jessie with pbuilder
