@@ -32,8 +32,11 @@ my $server_host = "localhost";
 my $server_port = 0;
 my $subject;
 
-my $server_args = "-no-fork -no-chdir -d 0 -auth-level 4 -p $server_port";
-
+my $server_args = "-no-chdir -d 0 -auth-level 4 -p $server_port";
+if ($< != 0)
+{
+    $server_args = "-no-fork $server_args";
+}
 chomp($subject = `env OPENSSL_CONF=testcred.cnf openssl x509 -subject -noout -in \${X509_USER_CERT:-testcred.cert} -nameopt rfc2253,-dn_rev `);
 $subject =~ s/^subject= */\//;
 $subject =~ s/,/\//g;
