@@ -33,7 +33,11 @@ my $server_prog = $ENV{GRIDFTP_SERVER_EXE} || "globus-gridftp-server";
 my $server_host = "localhost";
 my $subject;
 
-my $server_args = "-no-fork -no-chdir -no-exit -d 0 -auth-level 4 -p 0";
+my $server_args = "-no-chdir -no-exit -d 0 -auth-level 4 -p 0";
+if ($< != 0)
+{
+    $server_args = "-no-fork $server_args";
+}
 
 chomp($subject = `openssl x509 -subject -noout -in \${X509_USER_CERT:-testcred.cert} -nameopt rfc2253,-dn_rev`);
 $subject =~ s/^subject= */\//;
