@@ -34,8 +34,10 @@ my $server_port = 0;
 my $server_nosec = "-auth-level 4";
 my $subject;
 
-my $server_args = "-no-fork -no-chdir -d 0 -p $server_port $server_nosec";
-
+my $server_args = "-no-chdir -d 0 -p $server_port $server_nosec";
+if ($< != 0) {
+    $server_args = "-no-fork $server_args";
+}
 chomp($subject = `openssl x509 -in testcred.cert -subject -noout -nameopt rfc2253,-dn_rev`);
 $subject =~ s/^subject= */\//;
 $subject =~ s/,/\//g;
