@@ -1,0 +1,8 @@
+libtool.m4
+ltargz.m4
+ltdl.m4
+ltoptions.m4
+ltsugar.m4
+ltversion.m4
+lt~obsolete.m4
+.*.swp
