@@ -1,3 +1,9 @@
+globus-gass-copy (9.22-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix tests run as root
+
+ -- Globus Toolkit <support@globus.org>  Fri, 19 Aug 2016 10:14:23 -0400
+
 globus-gass-copy (9.21-1+gt6.@distro@) @distro@; urgency=low
 
   * Makefile fix
