@@ -1,3 +1,9 @@
+globus-xio-gridftp-driver (2.16-1+gt6.@distro@) @distro@; urgency=low
+
+  * don't use no-fork with root-run tests
+
+ -- Globus Toolkit <support@globus.org>  Fri, 19 Aug 2016 08:07:37 -0400
+
 globus-xio-gridftp-driver (2.15-1+gt6.@distro@) @distro@; urgency=low
 
   * Makefile fix
