@@ -1,3 +1,9 @@
+globus-ftp-client (8.32-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix tests run as root
+
+ -- Globus Toolkit <support@globus.org>  Fri, 19 Aug 2016 10:12:32 -0400
+
 globus-ftp-client (8.31-1+gt6.@distro@) @distro@; urgency=low
 
   * Makefile fix
